feat: added all announcement types from enum AdminMessageEventTypes of workadventure
